fix(components): improve width calculation logic in MDRowComponent for better layout handling